Fixed monitor controls/buttons css to avoid wrapping

--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@
 }
 
 .monitorControls {
-  width: 277px;
+  width: 285px;
   float: left;
-  margin: 0 160px 0 108px;
+  margin: 0 160px 0 100px;
   padding: 0;
   font-size: 14px;
 }
